visibilité fixe du bouton All works

--- a/style.css
+++ b/style.css
@@ -543,7 +543,7 @@ a:visited{
     align-items: center;
     margin-left: -50px;
     width: 100%;
-    height: 200px;
+    height: 150px;
     
 }
 #navigationNosProjets li{
@@ -559,7 +559,18 @@ a:visited{
     border-bottom: solid transparent 2px;
     width: 70px;
 }
+
 #navigationNosProjets li:hover .fas{
+    margin-top: 56px;
+    opacity: 1;
+}
+#navigationNosProjets .bouton:nth-child(1){
+    border-bottom: solid rgb(33, 137, 255) 3px;
+    color: white;
+    background-color: rgba(102, 172, 252, 0.9);
+    height: 19px;
+}
+#navigationNosProjets li:nth-child(1) .fas{
     margin-top: 56px;
     opacity: 1;
 }
@@ -567,7 +578,7 @@ a:visited{
     border-bottom: solid rgb(33, 137, 255) 3px;
     color: white;
     background-color: rgba(102, 172, 252, 0.9);
-    height: 17px;
+    height: 19px;
 }
 .bouton:focus{
     border-bottom: solid rgb(33, 137, 255) 3px;
